--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "process-min": "lightningcss --minify --browserslist ./tmp/simple-grid.css -o dist/simple-grid-min.css"
   },
   "dependencies": {
-    "lightningcss": "^1.23.0",
-    "npm-run-all": "^4.1.5"
+    "lightningcss-cli": "^1.23.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.70.0"
   },
   "browserslist": [
     "> 1%, last 6 versions, Firefox ESR, not dead"
