--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "compile-typography": "sass ./src/typography.scss ./tmp/typography.css",
     "process": "lightningcss --browserslist ./tmp/simple-grid.css -o dist/simple-grid.css",
     "process-min": "lightningcss --minify --browserslist ./tmp/simple-grid.css -o dist/simple-grid-min.css",
-    "process-typography": "lightningcss --browserslist ./tmp/simple-grid.css -o dist/typography.css",
+    "process-typography": "lightningcss --browserslist ./tmp/typography.css -o dist/typography.css",
     "process-min-typography": "lightningcss --minify --browserslist ./tmp/typography.css -o dist/typography-min.css"
   },
   "dependencies": {
