--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "build": "npm-run-all compile-default compile-typography process process-min process-typography process-min-typography",
     "compile-default": "sass ./sass/default.scss ./build/tmp/simple-grid.css",
     "compile-typography": "sass ./sass/typography.scss ./build/tmp/typography.css",
-    "process": "lightningcss --browserslist ./build/tmp/simple-grid.css -o ./build/distsimple-grid.css",
-    "process-min": "lightningcss --minify --browserslist ./build/tmp/simple-grid.css -o ./build/distsimple-grid-min.css",
-    "process-typography": "lightningcss --browserslist ./build/tmp/typography.css -o ./build/disttypography.css",
-    "process-min-typography": "lightningcss --minify --browserslist ./build/tmp/typography.css -o ./build/disttypography-min.css"
+    "process": "lightningcss --browserslist ./build/tmp/simple-grid.css -o ./build/dist/simple-grid.css",
+    "process-min": "lightningcss --minify --browserslist ./build/tmp/simple-grid.css -o ./build/dist/simple-grid-min.css",
+    "process-typography": "lightningcss --browserslist ./build/tmp/typography.css -o ./build/dist/typography.css",
+    "process-min-typography": "lightningcss --minify --browserslist ./build/tmp/typography.css -o ./build/dist/typography-min.css"
   },
   "dependencies": {
     "lightningcss-cli": "^1.23.0",
